# SpaceDice

./: LICENCE  Makefile  main.py  neoWs_data.json  neows_data.json  pyproject.toml
SpaceDiceOld/: Makefile  README.md  neows_data.json  package-lock.json  package.json  pyproject.toml  test.py
SpaceDiceOld/static/css/: custom.css.map  custom.scss  styles.css
SpaceDiceOld/static/docs/: doc.md
SpaceDiceOld/templates/: banner.html  base.html  dice.html  doc.html  home.html
SpaceDiceReloaded/: .env.example  .gitignore  ARCHITECTURE.md  FRONTEND.md  README.md  SPECS.md  TODO.md  gunicorn.conf.py  pyproject.toml
SpaceDiceReloaded/app/: __init__.py  db.py  nasa.py  routes.py
SpaceDiceReloaded/data/: neows_data.json
SpaceDiceReloaded/docker/: Dockerfile  docker-compose.yml  nginx.conf
SpaceDiceReloaded/scripts/: fetch_nasa.py
SpaceDiceReloaded/static/css/: style.css
SpaceDiceReloaded/static/js/: app.js
SpaceDiceReloaded/static/sprites/: CREDITS.md  ReadMe.txt
SpaceDiceReloaded/templates/: index.html
SpaceDiceReloaded/tests/: test_rng.py
static/css/: custom.css  custom.css.map  custom.scss  styles.css
templates/: dice.html  home.html  index.html
